clusters/prod/apps/default-namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    kubernetes.io/metadata.name: default
