clusters/prod/apps/postgresql-prod-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-prod-nodeport
  namespace: default
  labels:
    app.kubernetes.io/name: postgresql-prod
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: postgresql-prod
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 32032
  externalTrafficPolicy: Local
